chart/templates/istio-gateway/tmp/gateway-from-istio-operator-deployment.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
    meta.helm.sh/release-name: istio-system-istio
    meta.helm.sh/release-namespace: istio-system
  creationTimestamp: '2024-08-07T18:58:52Z'
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
    helm.toolkit.fluxcd.io/name: istio
    helm.toolkit.fluxcd.io/namespace: bigbang
  managedFields:
    - apiVersion: networking.istio.io/v1beta1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:meta.helm.sh/release-name: {}
            f:meta.helm.sh/release-namespace: {}
          f:labels:
            .: {}
            f:app.kubernetes.io/managed-by: {}
            f:helm.toolkit.fluxcd.io/name: {}
            f:helm.toolkit.fluxcd.io/namespace: {}
        f:spec:
          .: {}
          f:selector:
            .: {}
            f:app: {}
          f:servers: {}
      manager: helm-controller
      operation: Update
      time: '2024-08-07T18:58:52Z'
  name: public
  namespace: istio-system
  resourceVersion: '1734'
  uid: 5622c08e-6831-415c-bad1-9acccb8649b3
  selfLink: /apis/networking.istio.io/v1beta1/namespaces/istio-system/gateways/public
spec:
  selector:
    app: public-ingressgateway
  servers:
    - hosts:
        - '*.pve.geep-scala.ts.net'
      port:
        name: http
        number: 8080
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - '*.dev.bigbang.mil'
      port:
        name: https
        number: 8443
        protocol: HTTPS
      tls:
        credentialName: public-cert
        mode: SIMPLE
