chart/templates/istio-gateway/tmp/draft-kiali-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    meta.helm.sh/release-name: kiali-kiali
    meta.helm.sh/release-namespace: kiali
  labels:
    app.kubernetes.io/component: kiali
    app.kubernetes.io/instance: kiali-kiali
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kiali-operator
    app.kubernetes.io/part-of: kiali
    helm.sh/chart: kiali-1.87.0-bb.0
    helm.toolkit.fluxcd.io/name: kiali
    helm.toolkit.fluxcd.io/namespace: bigbang
  name: kiali
  namespace: kiali
spec:
  gateways:
    - istio-ingress/gateway
  hosts:
    - kiali.dev.bigbang.mil
  http:
    - route:
        - destination:
            host: kiali.kiali.svc.cluster.local
            port:
              number: 20001
